# sphero_robot

./: .gitignore  .gitmodules  LICENSE  README.md
sphero_bringup/: CMakeLists.txt  README.md  package.xml
sphero_bringup/launch/: odometry_pid.launch  only_joystick.launch  optitrack_joystick.launch  optitrack_pid.launch  twist_mux.launch  twist_mux_launcher.sh  webcam_ext.launch  webcam_joystick.launch  webcam_pid.launch
sphero_bringup/params/: default.yaml  twist_mux_joy_ext_topics.yaml  twist_mux_joy_pid_locks.yaml  twist_mux_joy_pid_topics.yaml  twist_mux_only_joy_topics.yaml
sphero_control/: CMakeLists.txt  README.md  package.xml  setup.py
sphero_control/launch/: optitrack_control.launch  pid_launch.sh  position_pid_launch.sh
sphero_control/src/sphero_control/: pid.py  position_pid_node.py
sphero_control/src/sphero_ros_control/: pid.py  pid_node.py
sphero_driver_v2/: CMakeLists.txt  README.md  package.xml  setup.py
sphero_driver_v2/cfg/: sphero_addresses.txt
sphero_driver_v2/launch/: drivers.launch  drivers.launch.py  drivers.launch.py (alternative)  drivers_launch.sh
sphero_driver_v2/src/sphero_driver_v2/: sphero_constants.py  sphero_node.py
sphero_localization/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
sphero_localization/config/: camera_north.json  camera_south.json  config.yaml  stitch_params.json
sphero_localization/launch/: kalman_filter_launch.sh  optitrack_localization.launch  simulated_localization.launch  sphero_webcam.launch  webcam_localization.launch
sphero_localization/maps/empty/: empty.yaml
sphero_localization/maps/random/: random.yaml
sphero_localization/maps/simple_maze/: simple_maze.yaml
sphero_localization/nodes/: kalman_filter_node.py  webcam_tracking.py
sphero_localization/scripts/: capture.py  filter_param_finder.py  tracking_test.py
sphero_localization/scripts/camera_calibration/: calibrate.py  calibration_window.py  take_pictures.py  undistort.py
sphero_localization/scripts/stitching/: sticher_perspective.py  stitch.py  stitching_window.py  take_picture.py
sphero_localization/src/sphero_localization/: blob_detector.py  duo_c270.py  kalman_filter.py  kalman_filter_node.py  range_detection.py  sort.py  sort_wrapper.py  sphero_blob_detector.py  sphero_init.py  sphero_tracking.py  webcam_tracking.py
sphero_teleop/: CMakeLists.txt  README.md  package.xml  setup.py
sphero_teleop/launch/: manual_ctrl_launch.sh
sphero_teleop/src/sphero_teleop/: man_control.py
sphero_utils/: CMakeLists.txt  README.md  package.xml
sphero_utils/nodes/: marker_server.py
sphero_utils/rviz/: kalman.rviz
