<?xml version="1.0"?>
<package format="2">
  <name>sphero_bringup</name>
  <version>1.0.0</version>
  <description>The sphero_bringup package provides launch files for starting common functionality groups from other packages.</description>

  <author email="marko.krizmancic@fer.hr">Marko Krizmancic</author>
  <maintainer email="marko.krizmancic@fer.hr">Marko Krizmancic</maintainer>
  <url type="repository">https://github.com/larics/sphero_robot</url>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>twist_mux</exec_depend>
  <exec_depend>sphero_control</exec_depend>
  <exec_depend>sphero_localization</exec_depend>
  <exec_depend>sphero_teleop</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
