<?xml version="1.0"?>
<package format="2">
  <name>sphero_localization</name>
  <version>1.0.0</version>
  <description>The sphero_localization package provide localization services for Sphero robots.</description>

  <author email="marko.krizmancic@fer.hr">Marko Krizmancic</author>
  <maintainer email="marko.krizmancic@fer.hr">Marko Krizmancic</maintainer>
  <url type="repository">https://github.com/larics/sphero_robot.</url>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
