<?xml version="1.0"?>
<package format="2">
  <name>sphero_teleop</name>
  <version>1.0.0</version>
  <description>The sphero_teleop package provides teleoperation for Sphero robots.</description>

  <author email="marko.krizmancic@fer.hr">Marko Krizmancic</author>
  <maintainer email="marko.krizmancic@fer.hr">Marko Krizmancic</maintainer>
  <url type="repository">https://github.com/larics/sphero_robot</url>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  
  <exec_depend>joy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
